@@ -1,9 +1,12 @@
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
 DIST tzcode2010j.tar.gz 191844 RMD160 604a0d9c8f30175f282c637d189591394c71431a SHA1 feac73315eb2ff82ff942590fcaea9224cc635c4 SHA256 f32b46405190e3a5f1ee4db9fb50aaf1379e6af4e5493402ebfc8ee757058e97
 DIST tzcode2010k.tar.gz 192047 RMD160 fd211701531f8b3ffa2383047279fc0d9d7da9e1 SHA1 57ecc7173fff554a5ab73a4b4546e557a1599783 SHA256 96671eac3a98d0c974833c8bfa7ea9b537cc9d32573e902103846b90f6dccdbd
+DIST tzcode2010l.tar.gz 192046 RMD160 2fa4dc6de8b728033cad088e71cb5e7a909729e7 SHA1 c5957ab9cd82f5c2acfec941cc65cf1d61ef62a8 SHA256 489876779f75f1c7659d26c09c3bcce62188b60eeb3981e0e3cd1f7669808ccc
 DIST tzdata2010j.tar.gz 189870 RMD160 35c63055336aac4561c857fd6d388e57a0178157 SHA1 94b49ba5029cb9d9ac1d15c2812943823261832a SHA256 dcf2101d0c5bb20a7f182866ea3e52b54c8f4d129c025a96c9a31377676f554b
 DIST tzdata2010k.tar.gz 191382 RMD160 b7a4ccc4c71d587111364914dbea131c90f566ad SHA1 46d26a7709860aaef3a7dfdab7e05c94ce9ad233 SHA256 ef69c99504c0fd9864ba8ef1daae5f2d4df097cf7dc350f09b8f70386272408d
+DIST tzdata2010l.tar.gz 191467 RMD160 da2477896c92a57d6bb93f3dea6febaf63d6e8d1 SHA1 cdf10096260437556c3b7151790ec0db13d3d908 SHA256 bae7b4a8364f7ab3d6d644eb6075de1e9a0c72fb3fb5843fc217d2ff57408577
 EBUILD timezone-data-2010j.ebuild 3160 RMD160 f601a8b6840349598bd31225c2288088d2f4b53e SHA1 59010610186dca9691865c0328e85719a3f0f09d SHA256 d33ad907eea8a50b434523c1a3a1649558cc51f0bd680c996195be1216d4b83e
 EBUILD timezone-data-2010k.ebuild 3160 RMD160 601f1b7d18ce4c1bb4107b05faf9d0b39dfc8c9d SHA1 166bd03c3369b9cdcc63e4424428acc7c9c9beab SHA256 126b180b094d0c554920aef9ea84ac488e46d5bbf1bf3b5daefecd175bfb3659
-MISC ChangeLog 30219 RMD160 a6b57bb972da1573733a59068b743d5ba186d953 SHA1 41365c81580d49d3b14f365d82bf3cde03c8f814 SHA256 ff36e2f91e8151175f02e864da7256a19e000255ffe946df9ca5bd3c802fb1c1
+EBUILD timezone-data-2010l.ebuild 3160 RMD160 082f44f04aaba10780ca32e947573fb778b032db SHA1 435c3463c46afc444e525a80aa6c0f103dd715cf SHA256 8c363a2ce8e116b01bf7cd1991e3939f99847eb91f65931403095c398413faf5
+MISC ChangeLog 30377 RMD160 6b07bba2c0e12ba94590ec9d49f8162fca73914e SHA1 b0ad3c2a6ada4588b02f44c40d6f557414af37fe SHA256 4b47340c6cb45461d400f1555709ac532dee171dd3128afe69e16f8d6b1272ce
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
