@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.235 2010/07/26 22:12:06 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.236 2010/08/16 17:49:12 vapier Exp $
+
+*timezone-data-2010l (16 Aug 2010)
+
+  16 Aug 2010; Mike Frysinger <vapier@gentoo.org> +timezone-data-2010l.ebuild:
+  Version bump #332995 by Rodrigo Severo.
 
 *timezone-data-2010k (26 Jul 2010)
 
